_sass/_home.sass
#part-1
    margin: 0
    .content
        padding-top: 10pt

#part-2-header
    position: relative
    height: 90px
    .header-circle
        position: absolute
        bottom: 10px
        circle
            stroke: none
            fill: $text-color
    .header-wave
        position: absolute
        bottom: 0
        path
            fill: $primary-color

#part-2
    margin: 0
    color: $on-primary-color
    background-color: $primary-color

    h2
        font: 600 $font-size-big $font-clash
        text-align: center
        margin: 0 0 45pt 0

    .items
        overflow-x: scroll
        overflow-y: hidden
        display: flex
        gap: 10pt
        align-items: center
        justify-content: center
        flex-direction: column

    @media screen and (min-width: $breakpoint-small)
        .items
            flex-direction: row

    @media screen and (max-width: $breakpoint-medium)
        .items
            justify-content: normal

#part-3
    margin: 0
    h2
        font: 600 $font-size-big $font-clash
        margin-top: 0

